--- a/styles.css
+++ b/styles.css
@@ -225,3 +225,24 @@ left: 50%;
 transform: translate(-50%, 50%);
 }
 }
+
+.buttonClass {
+  font-size:15px;
+  font-family:Arial;
+  width:100%;
+  height:37px;
+  border-width:1px;
+  font-weight:bold;
+  border-top-left-radius:7px;
+  border-top-right-radius:7px;
+  border-bottom-left-radius:7px;
+  border-bottom-right-radius:7px;
+  box-shadow: 0px 2px 0px -2px rgb(0 0 0);
+  cursor: pointer;
+  transition:box-shadow 100ms ease-in-out;
+
+}
+
+.buttonClass:hover {
+  box-shadow: 0px 2px 6px -2px rgb(0 0 0); 
+}
