--- a/switchButton.css
+++ b/switchButton.css
@@ -57,6 +57,7 @@ input[type="checkbox"].switch:checked + label:before {
   padding: 20px;
   align-items: center;
   border-radius: 10px;
+  position: absolute;
 }
 .option-container {
   display: flex;
